[package]
name = "raytracer-challenge"
version = "0.1.0"
authors = ["David Boehme <dboehme42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.8"
image = "0.23"
yaml-rust = "0.4"
getopts = "0.2"
